# Tech-Verse

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_body.py  0003_blog_slug.py  0004_alter_blog_slug.py
chat/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_room_slug.py  0003_conversation_directmessage.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: base.py  development.py
short/: admin.py  models.py  urls.py  views.py
short/migrations/: 0001_initial.py  0002_alter_short_options_short_publish_date_and_more.py  0003_alter_short_publish_date.py  0004_comment.py  0005_alter_short_content.py
templates/: base.html  home.html
templates/accounts/: password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
templates/blog/: create.html  detail.html  list.html
templates/chat/: create_room.html  dm_conversation.html  dm_inbox.html  index.html  room.html  rooms.html  user_list.html
templates/registration/: password_reset_email.html
templates/short/: list.html
templates/users/: createprofile.html  login.html  profile.html  signup.html  signupemail.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_userprofile_other.py
