[project]
name = "tech-verse"
version = "0.1.0"
description = ""
authors = [
    {name = "vbello_tech",email = "vbellotech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.2.7)",
    "django-channels (==0.7.0)",
    "pillow (==11.3.0)",
    "psycopg2-binary (==2.9.11)",
    "python-decouple (==3.8)",
    "daphne (==4.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
